--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,36 @@
+#spring.application.name=Author-Book-Manager
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=phing12345Now
+#spring.profiles.active=dev
+#server.port=8081
+#
+#mybatis.mapper-locations=classpath:/mappers/*.xml
+#mybatis.type-aliases-package=com.example.Author.Book.Manager.model
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+
+
+
+
 spring.application.name=Author-Book-Manager
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+
+# Use environment variables instead of hardcoding
+spring.datasource.url=jdbc:postgresql://turntable.proxy.rlwy.net:16027/railway?sslmode=require
 spring.datasource.username=postgres
-spring.datasource.password=phing12345
+spring.datasource.password=QqzoBHXFKbChWNhRudMhVfPeLHYLDgtd
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.profiles.active=dev
 server.port=8081
 
 mybatis.mapper-locations=classpath:/mappers/*.xml
 mybatis.type-aliases-package=com.example.Author.Book.Manager.model
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+
