Use environment variables for datasource configuration
Replaced hardcoded database credentials with environment variables.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@
 spring.application.name=Author-Book-Manager
 
 # Use environment variables instead of hardcoding
-spring.datasource.url=jdbc:postgresql://turntable.proxy.rlwy.net:16027/railway?sslmode=require
-spring.datasource.username=postgres
-spring.datasource.password=QqzoBHXFKbChWNhRudMhVfPeLHYLDgtd
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.profiles.active=dev
