--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,14 +17,10 @@
 
 spring.application.name=Author-Book-Manager
 
-# Database configuration - supports multiple environment variable formats
-# Priority: DATABASE_URL (parsed by DataSourceConfig) > SPRING_DATASOURCE_* > PGHOST/PGPORT/etc
-# If DATABASE_URL is provided, DataSourceConfig will handle it
-# Otherwise, use individual variables with fallbacks
-# Local development defaults - using Railway database (can be overridden by environment variables)
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://turntable.proxy.rlwy.net:16027/railway?sslmode=require}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${PGUSER:postgres}}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${PGPASSWORD:QqzoBHXFKbChWNhRudMhVfPeLHYLDgtd}}
+# Use environment variables instead of hardcoding
+spring.datasource.url=jdbc:postgresql://turntable.proxy.rlwy.net:16027/railway?sslmode=require
+spring.datasource.username=postgres
+spring.datasource.password=QqzoBHXFKbChWNhRudMhVfPeLHYLDgtd
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Connection pool settings for better reliability
