--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@
 spring.application.name=Author-Book-Manager
 
 # Use environment variables instead of hardcoding
-spring.datasource.url=jdbc:postgresql://turntable.proxy.rlwy.net:16027/railway?sslmode=require
-spring.datasource.username=postgres
-spring.datasource.password=QqzoBHXFKbChWNhRudMhVfPeLHYLDgtd
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Connection pool settings for better reliability
@@ -31,8 +31,7 @@ spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
 
 spring.profiles.active=dev
-# Use Railway PORT environment variable if available, otherwise default to 8081
-server.port=${PORT:8081}
+server.port=8080
 
 mybatis.mapper-locations=classpath:/mappers/*.xml
 mybatis.type-aliases-package=com.example.Author.Book.Manager.model
