--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,14 +17,26 @@
 
 spring.application.name=Author-Book-Manager
 
-# Use environment variables instead of hardcoding
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# Database configuration - supports multiple environment variable formats
+# Priority: DATABASE_URL (parsed by DataSourceConfig) > SPRING_DATASOURCE_* > PGHOST/PGPORT/etc
+# If DATABASE_URL is provided, DataSourceConfig will handle it
+# Otherwise, use individual variables with fallbacks
+# Local development defaults - using Railway database (can be overridden by environment variables)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://turntable.proxy.rlwy.net:16027/railway?sslmode=require}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${PGUSER:postgres}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${PGPASSWORD:QqzoBHXFKbChWNhRudMhVfPeLHYLDgtd}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Connection pool settings for better reliability
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
 spring.profiles.active=dev
-server.port=8081
+# Use Railway PORT environment variable if available, otherwise default to 8081
+server.port=${PORT:8081}
 
 mybatis.mapper-locations=classpath:/mappers/*.xml
 mybatis.type-aliases-package=com.example.Author.Book.Manager.model
