--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,9 @@ spring.application.name=Author-Book-Manager
 # If DATABASE_URL is provided, DataSourceConfig will handle it
 # Otherwise, use individual variables with fallbacks
 # Local development defaults - using Railway database (can be overridden by environment variables)
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://turntable.proxy.rlwy.net:16027/railway?sslmode=require}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${PGUSER:postgres}}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${PGPASSWORD:QqzoBHXFKbChWNhRudMhVfPeLHYLDgtd}}
+spring.datasource.url=jdbc:postgresql://dpg-d5pq6c63jp1c73ekh64g-a.singapore-postgres.render.com:5432/author_book_manager
+spring.datasource.username=author_book_manager_user
+spring.datasource.password=So7QoZHTM9eMZRYudK8CwPiz4qYUtXdk
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Connection pool settings for better reliability
