Implement user authorization and authenthication with Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,5 +44,9 @@ mybatis.type-aliases-package=com.example.Author.Book.Manager.model
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# JWT Configuration
+jwt.secret=${JWT_SECRET:your-256-bit-secret-key-that-is-long-enough-for-hmac-sha256-algorithm-minimum-32-characters}
+jwt.expiration=86400000
+
 
 
