--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,3 @@
-#spring.application.name=Author-Book-Manager
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=phing12345Now
-#spring.profiles.active=dev
-#server.port=8081
-#
-#mybatis.mapper-locations=classpath:/mappers/*.xml
-#mybatis.type-aliases-package=com.example.Author.Book.Manager.model
-#
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-
-
-
-
-
 spring.application.name=Author-Book-Manager
 
 # Database configuration - supports multiple environment variable formats
@@ -46,7 +29,7 @@ spring.jpa.show-sql=true
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET:your-256-bit-secret-key-that-is-long-enough-for-hmac-sha256-algorithm-minimum-32-characters}
-jwt.expiration=86400000
+jwt.expiration=300000
 
 
 
