--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ mybatis.type-aliases-package=com.example.Author.Book.Manager.model
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# JWT Configuration
+# JWT Configuration - In production, set JWT_SECRET env var (min 32 chars for HS256)
 jwt.secret=${JWT_SECRET:your-256-bit-secret-key-that-is-long-enough-for-hmac-sha256-algorithm-minimum-32-characters}
 jwt.expiration=300000
 
